ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 2.5.2
    • Affects Version/s: None
    • Component/s: Testing Infrastructure
    • Environment:
      MCI linux-64-debug-duroff
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I have successfully repro'd this failure on Linux 64 bit debug.

      MCI says rev 07c221086ff5c2 fails, c735600b22a was good. Will bisect asap.

      http://mci.10gen.com/ui/task/mongodb_mongo_master_linux_64_debug_duroff_07c221086ff5c20d4d62ba69837d90404459c335_13_08_20_18_54_06_tool_linux_64#logs/task/true
      http://buildlogs.mongodb.org/mci_0.9_linux_64_debug_duroff/builds/546/test/tool_0/oplog_all_ops.js

      mutex problem
        when locking ReplicaSetMonitor
        ReplicaSetMonitorWatcher::_safego was already locked and should not be.
        set a and b above to debug.
      2013-08-20T19:37:42.022+0000 [ReplicaSetMonitorWatcher]  Assertion failure 0 src/mongo/util/concurrency/mutexdebugger.h 134
      2013-08-20T19:37:42.028+0000 [ReplicaSetMonitorWatcher]  0x9d5277 0x9bfc54 0x9a8bc8 0x8a988a 0x8a9ba0 0x9128b9 0x9201e7 0x9a9ee1 0x9accd2 0x9acbdd 0x9acb5f 0x9acaf2 0xa13266 0x7f7140339c6b 0x7f713f6df5ed 
       ./mongo(_ZN5mongo15printStackTraceERSo+0x27) [0x9d5277]
       ./mongo(_ZN5mongo10logContextEPKc+0x71) [0x9bfc54]
       ./mongo(_ZN5mongo12verifyFailedEPKcS1_j+0xff) [0x9a8bc8]
       ./mongo(_ZN5mongo13MutexDebugger8enteringEPKc+0x6e6) [0x8a988a]
       ./mongo(_ZN5mongo5mutex11scoped_lockC1ERS0_+0x74) [0x8a9ba0]
       ./mongo(_ZN5mongo17ReplicaSetMonitor8checkAllEv+0x45) [0x9128b9]
       ./mongo(_ZN5mongo24ReplicaSetMonitorWatcher3runEv+0xb1) [0x9201e7]
       ./mongo(_ZN5mongo13BackgroundJob7jobBodyEN5boost10shared_ptrINS0_9JobStatusEEE+0x2cf) [0x9a9ee1]
       ./mongo(_ZNK5boost4_mfi3mf1IvN5mongo13BackgroundJobENS_10shared_ptrINS3_9JobStatusEEEEclEPS3_S6_+0x7a) [0x9accd2]
       ./mongo(_ZN5boost3_bi5list2INS0_5valueIPN5mongo13BackgroundJobEEENS2_INS_10shared_ptrINS4_9JobStatusEEEEEEclINS_4_mfi3mf1IvS4_S9_EENS0_5list0EEEvNS0_4typeIvEERT_RT0_i+0x77) [0x9acbdd]
       ./mongo(_ZN5boost3_bi6bind_tIvNS_4_mfi3mf1IvN5mongo13BackgroundJobENS_10shared_ptrINS5_9JobStatusEEEEENS0_5list2INS0_5valueIPS5_EENSB_IS8_EEEEEclEv+0x39) [0x9acb5f]
       ./mongo(_ZN5boost6detail11thread_dataINS_3_bi6bind_tIvNS_4_mfi3mf1IvN5mongo13BackgroundJobENS_10shared_ptrINS7_9JobStatusEEEEENS2_5list2INS2_5valueIPS7_EENSD_ISA_EEEEEEE3runEv+0x1e) [0x9acaf2]
       ./mongo() [0xa13266]
       /lib64/libpthread.so.0(+0x7c6b) [0x7f7140339c6b]
       /lib64/libc.so.6(clone+0x6d) [0x7f713f6df5ed]
      2013-08-20T19:37:42.028+0000 [ReplicaSetMonitorWatcher] 
      ***aborting after verify() failure as this is a debug/test build
      

            Assignee:
            Randolph Tan
            Reporter:
            Matt Kangas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: