SERVER-10582 oplog_all_ops.js fails on Assertion failure, mutex problem when locking RSM

Avoid the mutex lock ordering inconsistency by not holding the _monitorMutex when calling ReplicaSetMonitor::checkAll.